class Plan {
    private int id;
    private String name;
    private double price;
    private int maxProfiles;
    private boolean allowOffline;
}
