enum SubscriptionStatus {
    ACTIVE,
    EXPIRED,
    CANCELLED,
    PENDING_PAYMENT
}
