  @startuml
  
  class User {
    - id : int
    - name : String
    - email : String
    - password : String
    - country: String
    - registerDate: LocalDate
    - profiles : List‹Profile›
    - subscription : Subscription
  }
  
  class Profile {
    - id : int
    - nickname : String
    - isPrivate : boolean
    - myPlaylists : List‹Playlist›
    - followedPlaylists : List‹Playlist›
    - followedArtists : List‹Artist›
    - following : List‹Profile›
    - followers : List‹Profile›
    - avatarUrl : String
  }
  
  'autoRenew para autorenovacion??'
  class Subscription{
    - id : int 
    - startDate : LocalDate
    - endDate : LocalDate
    - status : SubscriptionStatus
    - paymentMethod : String 
    - plan : Plan
  }
  
  
  enum SubscriptionStatus {
    ACTIVE
    EXPIRED 
    CANCELLED
    PENDING_PAYMENT
  }
  
  class Plan{
    - id : int
    - name : String 
    - price : double
    - maxProfiles : int 
    - allowOffline : boolean
  }
  
  class Album {
    - id : int
    - title : String
    - releaseDate : LocalDate
    - songs : List‹Song›
    - artists : List‹Artist›
    - coverUrl : String
  }
  
  class EP
  
  class Song {
    - id : int
    - title : String
    - duration : int
    - fileUrl : String
    - artists : List‹Artist›
    - playCount : long
  }
  
  class Single
  
  class Playlist{
    - id : int
    - title : String
    - description : String
    - coverUrl : String 
    - isPublic : boolean
    - songs : List‹Song›
    - owner : Profile
    - creationDate : LocalDate
    - followers : List‹Profile›
  }

  class Artist {
    - id : int
    - name : String
    - biography : String
    - country : String
    - avatarUrl : String
    - albums : List‹Album›
    - songs : List‹Song›
  }
  
  ' POR PARTE DEL USUARIO
  Subscription --> Plan
  Subscription ..> SubscriptionStatus
  User *-- Profile
  ' es el usuario o el perfil quien tiene una suscripcion?
  User *-- Subscription
  Profile ..> Subscription
  Profile o-- Playlist
  
  'COMO RED SOCIAL
  Profile --> Profile
  Profile --> Artist
  
  ' SOBRE EL CONTENIDO
  Album o-- Song
  Album <|-- EP
  Song <|-- Single
  Playlist o-- Song
  
  
  ' SOBRE AUTORIA
  Artist <--> Album
  Artist <--> Song
  
  @enduml